# 2d_heat_conduction

./: .gitignore  2d_heat_eqn.py  README.md
C_CODE/SIMPLE/: Boundary.cpp  Boundary.hpp  CMakeLists.txt  Corrections.cpp  Corrections.hpp  MomentumEquations.cpp  MomentumEquations.hpp  ProblemInfo.hpp  SIMPLE.cpp  SIMPLE.hpp  Utilities.cpp  Utilities.hpp  boundary.cpp  boundary.hpp  main.cpp  momentum_eqn.cpp  momentum_eqn.hpp  plot.py
C_CODE/chorin_projection/: CMakeLists.txt  compile.sh  main.cpp  plot.py  test_pressure_sol.csv  test_u_sol.csv  test_v_sol.csv
C_CODE/eigen_test/: array_v_matrix.cpp  example2.cpp  my_program.cpp
C_CODE/file_io/: file.c  info.txt
C_CODE/src_1D/: Functions.c  Functions.h  Mesh.h  Node.h  README.md  a.out  fullyimplicit1d.c  main.c  steady1d.c
SIMPLE/: equations.ipynb  simple.ipynb
cfd_methods_book/: burgers_eqn_system.ipynb  finite_diff_example.ipynb  finite_diff_example_diffusion.ipynb
drift_flux/: drift_flux_1.ipynb  drift_flux_1.py  drift_flux_scratch.ipynb  drift_flux_staggered.py
drift_flux/solver/: classes.py  constants.py  drift_flux_staggered.py  functions.py  helper_functions.py  linear_solver.py  solution_steady_state.py  solution_transient.py
nonlinear_de/: newton.ipynb
python/: cavity_flow.ipynb  chorin_projection.ipynb  simple.ipynb  stablefluids.py
